# rayshooter

./: .clang-format  CMakeLists.txt  README.md  rayshooter.c  todo-features.txt
src/: assets.cpp  assets.h  assets.hpp  camera.cpp  camera.h  draw.cpp  draw.h  globals.h  globals.hpp  main.cpp  player.cpp
src/gameplay/: camera.cpp  camera.hpp  draw.cpp  draw.hpp  gameplay.cpp  gameplay.hpp  player.cpp  player.h  player.hpp  ui.cpp  ui.hpp  weapon_control.cpp  weapon_control.hpp  zombie.hpp
src/gameplay/inventory/: inventory.cpp  inventory.hpp
src/main_menu/: main_menu.cpp  main_menu.h  main_menu.hpp
src/pause/: pause.cpp  pause.h
src/pause_menu/: pause_menu.cpp  pause_menu.hpp
